Change /articles/:id API to return only one article
